--- a/DotaAntiSpammer/DotaAntiSpammerUI/Controls/Match/MatchMedium.xaml
+++ b/DotaAntiSpammer/DotaAntiSpammerUI/Controls/Match/MatchMedium.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:player="clr-namespace:DotaAntiSpammerNet.Controls.Player"
+             xmlns:bans="clr-namespace:DotaAntiSpammerNet.Controls.Bans"
              mc:Ignorable="d"
              Width="1500"
              Height="110">
@@ -13,21 +14,24 @@
             <ColumnDefinition Width="264" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0" Orientation="Horizontal">
-    
-            <player:PlayerMedium x:Name="Player01" Margin="5 0 0 0"/>
-            <player:PlayerMedium x:Name="Player02" />
-            <player:PlayerMedium x:Name="Player03" />
-            <player:PlayerMedium x:Name="Player04" />
-            <player:PlayerMedium x:Name="Player05" />
-        </StackPanel>
-
-        <StackPanel Grid.Column="2" Orientation="Horizontal">
-            <player:PlayerMedium x:Name="Player11" />
-            <player:PlayerMedium x:Name="Player12" />
-            <player:PlayerMedium x:Name="Player13" />
-            <player:PlayerMedium x:Name="Player14" />
-            <player:PlayerMedium x:Name="Player15" />
-        </StackPanel>
+        <Border Grid.Column="0" BorderThickness="1" Name="BorderA">
+            <StackPanel Orientation="Horizontal">
+                <player:PlayerMedium x:Name="Player01" Margin="5 0 0 0" />
+                <player:PlayerMedium x:Name="Player02" />
+                <player:PlayerMedium x:Name="Player03" />
+                <player:PlayerMedium x:Name="Player04" />
+                <player:PlayerMedium x:Name="Player05" />
+            </StackPanel>
+        </Border>
+        <bans:Bans Grid.Column="1" x:Name="BansX" />
+        <Border Grid.Column="2" BorderThickness="1" Name="BorderB">
+            <StackPanel Orientation="Horizontal">
+                <player:PlayerMedium x:Name="Player11" />
+                <player:PlayerMedium x:Name="Player12" />
+                <player:PlayerMedium x:Name="Player13" />
+                <player:PlayerMedium x:Name="Player14" />
+                <player:PlayerMedium x:Name="Player15" />
+            </StackPanel>
+        </Border>
     </Grid>
 </UserControl>
