--- a/DotaAntiSpammer/DotaAntiSpammerUI/Controls/Match/MatchMedium.xaml
+++ b/DotaAntiSpammer/DotaAntiSpammerUI/Controls/Match/MatchMedium.xaml
@@ -14,9 +14,9 @@
             <ColumnDefinition Width="264" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Border Grid.Column="0" BorderThickness="1" Name="BorderA">
+        <Border Grid.Column="0" BorderThickness="1" Name="BorderA" Margin="5 0 0 0">
             <StackPanel Orientation="Horizontal">
-                <player:PlayerMedium x:Name="Player01" Margin="5 0 0 0" />
+                <player:PlayerMedium x:Name="Player01"  />
                 <player:PlayerMedium x:Name="Player02" />
                 <player:PlayerMedium x:Name="Player03" />
                 <player:PlayerMedium x:Name="Player04" />
