--- a/DotaAntiSpammer/DotaAntiSpammerUI/Controls/Bans/Bans.xaml
+++ b/DotaAntiSpammer/DotaAntiSpammerUI/Controls/Bans/Bans.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
+             Width="264" Height="110"
              d:DesignHeight="110" d:DesignWidth="264">
     <Grid>
        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
